DuPont DevSB/src/objects/Metric__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001EnMcEAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName> Australian Dollar</fullName>
                </value>
                <value>
                    <fullName> Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName> Swiss Franc</fullName>
                </value>
                <value>
                    <fullName> Chinese Yuan</fullName>
                </value>
                <value>
                    <fullName> Danish Krone</fullName>
                </value>
                <value>
                    <fullName> Euro</fullName>
                </value>
                <value>
                    <fullName> British Pound</fullName>
                </value>
                <value>
                    <fullName> Japanese Yen</fullName>
                </value>
                <value>
                    <fullName> Polish Zloty</fullName>
                </value>
                <value>
                    <fullName> Swedish Krona</fullName>
                </value>
                <value>
                    <fullName> Turkish Lira</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Metric_ID__c</fullName>
        <description>Auto number for reconciling metrics with other records.</description>
        <label>Metric ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Type__c</fullName>
        <label>Metric Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                    <label>Actual</label>
                </value>
                <value>
                    <fullName>COT</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Corian</fullName>
                </value>
                <value>
                    <fullName>Zodiaq</fullName>
                </value>
                <value>
                    <fullName>Joint Adhesive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cubic meter</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>each</fullName>
                </value>
                <value>
                    <fullName>Gallon UK</fullName>
                </value>
                <value>
                    <fullName>Gallon US</fullName>
                </value>
                <value>
                    <fullName>Gram</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Litre</fullName>
                </value>
                <value>
                    <fullName>Pair</fullName>
                </value>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Square foot</fullName>
                </value>
                <value>
                    <fullName>Square inch</fullName>
                </value>
                <value>
                    <fullName>Square meter</fullName>
                </value>
                <value>
                    <fullName>tbd</fullName>
                </value>
                <value>
                    <fullName>Ton, metric</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fOpportunity_Name__c</fullName>
        <description>(11/6/2017) - Removed Opportunity__c reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <label>Opportunity Name formula</label>
        <type>Text</type>
    </fields>
    <label>Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BI_NA_Metrics</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Amount__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metric__c.BI_NA_Metric</value>
        </filters>
        <label>BI-NA Metrics</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BINA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <recordTypes>
        <fullName>Actual</fullName>
        <active>false</active>
        <description>Actual</description>
        <label>Actual</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Metric</fullName>
        <active>true</active>
        <label>BI-NA Metric</label>
    </recordTypes>
    <recordTypes>
        <fullName>COT</fullName>
        <active>true</active>
        <description>COT</description>
        <label>COT</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomerMetric</fullName>
        <active>false</active>
        <description>Metric used by the Customer to measure his status and/or objectives</description>
        <label>Customer Metric</label>
    </recordTypes>
    <recordTypes>
        <fullName>CustomerSatisfaction</fullName>
        <active>false</active>
        <description>Measurement of Customer Satisfaction</description>
        <label>Customer Satisfaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO</fullName>
        <active>false</active>
        <description>PO</description>
        <label>PO</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>